2007-11-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxTaskEditor.m ([-acceptAction])
	([-declineAction]): commented out unused methods.

	* UI/MailPartViewers/UIxMailPartICalActions.m
	([UIxMailPartICalActions -deleteFromCalendarAction]): actually
	delete the found object.

2007-11-18  Ludovic Marcotte <ludovic@inverse.ca>

	* SoObjects/Mailer/SOGoMailBodyPart.m
	SoObjects/Mailer/SOGoMailObject.m
	UI/MailPartViewers/UIxMailPartViewer.m
	Added support of messages containing non-textual
	content and no parts.

	* UI/MailerUI/UIxMailView.m
	SoObjects/Mailer/SOGoMailObject.m
	UI/Templates/MailerUI/UIxMailView.wox
	Added support for the Reply-To header upon
	message display.

2007-11-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxTaskEditor.m ([UIxTaskEditor -saveAction]):
	invoke saveComponent:.

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor -hasOrganizer])
	([UIxComponentEditor -organizerName]): new template accessor
	related to displaying the event's organizer.
	([-containsConflict:_component]): removed method.
	([UIxComponentEditor -takeValuesFromRequest:_rqinContext:_ctx]):
	set RSVP to "TRUE" on each attendee.

	* UI/Scheduler/UIxAppointmentEditor.m ([UIxAppointmentEditor
	-saveAction]): invoke saveComponent:.

	* UI/MailPartViewers/UIxMailPartICalViewer.m
	([UIxMailPartICalViewer -isLoggedInUserTheOrganizer]): make use of
	the -userIsOrganizer: category method.
	([-isLoggedInUserAnAttendee]): make use of -userIsParticipant:.
	([UIxMailPartICalViewer -hasSenderStatusChanged]): new template
	accessor that determines whether the "Update" button should be
	displayed.

	* UI/MailPartViewers/UIxMailPartICalActions.m
	([UIxMailPartICalActions -deleteFromCalendarAction]): implemented
	action.
	([UIxMailPartICalActions -updateUserStatusAction]): implemented
	action.

	* UI/Common/UIxPageFrame.m ([UIxPageFrame
	-setCssFiles:newCSSFiles]): new accessor that enables the
	sub-templates to specify extra CSS files to load.
